--- a/CapaPresentacion/FrmACF_BajaEvaluacionTecnica.resx
+++ b/CapaPresentacion/FrmACF_BajaEvaluacionTecnica.resx
@@ -117,4 +117,176 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripRefrescar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAXTSURBVFhHrVZpbJRVFL2TlkIMW7FU3AGBKggoKksJVKaF
+        tuxgTIA/KlFCIkaUNEEoDC1lKxQ0FTqdmW6gqAg0tQSLNrQjXUAKWNvSshW6soT407j8OJ7LfB2bcTbJ
+        THLydabvu+e8++6794iE9hOxYK9gbqaUMmx4aEMHFy1y7h7Bjm8F8dvkOF8JC+610K2KTtgluNqxEZZv
+        QiPCNCdd5s/eJkdnW+T3+J0C8w4X4r1Af5+eLrjckY6qqytg0UykP1wmTIlpMm+yRf6Yn8WUlsSi7NIH
+        aOu24lYXcduOpo6FxBJi6b9oX4Jf2xaguTsbORWCmutvw3L8/4sIT94hlXqWn5YloKk9Cy2dWXBeXobS
+        umn4qupJfF39DA5VCWHyAoH1J0EuYTsjqL25EmnfCRIzgivMPrMz5Pby/UPgvLoeLbf3oKwxHnanIKeS
+        gYlcBQP7gk2JzwrsBorO90XZlReRlClgqQ3wV25hVFm8fH8kLnZk4kJnCg7WDYa1mmQ1DKqoZWDCdt4F
+        uw+4/18nKPhFkPY962ajVJJ8iC8BplmfyNJkqjx17T3UdK2C7QJ3TQIrg9gvmnC4aRiOtYxC8bUYlNx6
+        AUUtgoNX/ovCZoGj3oXCRsGWMsHMFHGSeIK/DPTTgssqn4yaOyuR1xgOKwMoDjU/ipNtsTjSMgkbSiPx
+        Tt4jWLS3P+bwRiR6YI7ekK2CIgorpMC0H9zkk0ge5as5maatFvPifeGouPsGDrc+jhy+rPiy9QmcvrcQ
+        n9VMgBZl7IdSOmKGvD86QdYwWAIR74GkJIo63CFI5y0wdt5D7rMpRSSkSenmk8Nx4u5ryLlGcqLgRn9U
+        //YuDpybirgtcjd6rCwn2cvEc8TTxDAi2gMx83YLtrNe4lxpD0iuNTFQ029rGEnlUci97hJQfm8xKrpX
+        I5kB+w6SWVw3XNcSEUaLNXkpqOiFnAXmVKkNllxjRCWzfR6/H4kvusJQyPTltwtu/n0Au05PROw6Keaa
+        Zw1ib6S9dUQaxTaRz6GGUF+F7/49ymyRKhWRyCJSaDEp9FaMf1PeMnYeMJAhchCfet+Dnoa6eBwRR3gW
+        1VT+9pQROBgBvdeYWFtxeoQ6oHSOKPTvRG6MGz7RI1KVqghNmWdRaePoRwRKvTdxEfFpkp9ZMh6tnfvQ
+        eGMjGls34fLNzbjRsRVJFGbwBrWxcDUZajaCzcawl2So7rS2JQXOhmWwnmT3ZEfMOyXYUyzQwtf6C4Y9
+        TM2FmgztBXxBC83fxzRjnYyYlSHtBZXz0dC2DQcrBsJGYsePbFKnBWuLeFM2S3kwAh6Qq7lQk6HnZxyT
+        pwDT3O0yJcEir5oz5IAOnjznPDS0p+Ho2edhLWc7J3EeB5lCMzl2kawIVNxhaibUVFRdWfHAZKjZMG/3
+        bkb0xqzKj0Z6yRg4W9bgwq0UHDsfAyuJbSR1cKIWcYSncDNxu+VPko/0d5wucpoJNRU5DNLc9Tnquxeg
+        8Q5NyB2aEDeWMM0WYhPqO1NR1/YxTjUlI7864oEnsHN0O0hcyO6YzThaFxOXyUdG+r0Wd7iaBzURaibU
+        VGggNRlW7iLXD6xcq1CvYCOpnaPcQeJCeoNsTT3dlTGWRxu3y2stDdAzVBOhZqLHWOgzNwB6r3WcY0f9
+        mWnnWM+meD335J1yn4w6Twb7u9pDVKWaCDUTdvoBt8G4qN7ABy65DIqD6/NIWsDvDj5TjjLtLN6EVKkn
+        6RTiMcKvXdemNEFHqZoJNRVug6EGhIPKJxroH5oEu3lMa48Yu7bIX+MWyQbGfIXQCdon0N3XzqgNYpKK
+        UFOh5kJNhpoNnRGeRsT9nTtNIrTJvL5ezoxbLKmMM50YY/SPoOeDpsgtQs2Fmgw1G/w9ifCcGb2/m/n/
+        mcaOR/GpLf6h2rlbhJoLNRlqNhgshvCcGZ7fVbx6h77+ii3QUej/3SLUZKjZMMiDeTdka1SEplFNhjrb
+        QLMgZMS9A/WMbDUbaslC9vkHBdDhbLyXaNgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripAgregar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATlSURBVFhH7ZZ7TFt1FMebmIVgRsyyuGRkM2rMFsHFBQOD
+        kADjkYCr+BguysD4mOCic1EYPkaYW1SCy8LmsinCYlydMDoQrDykY0BboTx2ga5QKLBCoKNUoJRSVl79
+        es9Pu3RIx2No/IOTnOS2vb3fz/n+zjmtQLAWaw4s0YHmARvE3DjLoutjkHAmVKhMqFGboNCascTHrOy2
+        ijYLKJv6rEystd/Krh3vE0SBTI+ckt7VBaGqLytHUd8zAdv0HCjM1lkYTLY7r02WKbR0jzIwyqyibsg4
+        w/2DUHUlqnH0DU8xYeewTttxi4fQ6S3gukzo+sMGrdnOkmCzCjpRWnMfbsyv2lncbreDcoo3xGiZwYjN
+        DuOUHQOWOfSM29FjtbMjyha3IfcXzfKcIAtJnCpyFQ5xApicBcgNMw9AIEOTduh5AD3/dXoGQWScUy4N
+        gjqaxMnae4UrAGcIAiFXCCLrUivSM+X3hvi5cYSNFDXYYjEfgFwg8fkADif6+GMRFbUjI1O2MEQ5N8Jm
+        eblBICRO6YByHIPjKKgvCKTXCojLu/D5V1ULQ4gq9eg18HctIdTD7cjW5CCV+wQfcR8ipfEITrWegXRA
+        yfqAnHAGIAcIgFJS04e0LysXhqD5VfeMuUQwTg4z0ZiGQLzbuRvJ3SE43LELB1U7EVfvjfDKbYiTxaHW
+        oGEQVDk5QABsOv6ekDKl3jXE2dx21KmM/4AYtA4hvjYGh7vDcH70TZy6FYsfh46h0JCJvIF0fKyOxHst
+        gRDKH8czJV68GxxzwxnAsSdoTK+2GJGWUbOwE+nZHJrUd0N8xh1DojYI2WOJTPy4LhqdEw0MdHrOhiMq
+        IeLrfRCv9EXwtc2IlEahz2JjLjgccAC08+2m43ebgt+WJzKqF4Y4+V0jFI0DTEBr7kJMfRCrPEO/F6k3
+        w5GkCcANs5x9fntuAm80+CNKtgVhNVvxrOxJPCHxQHZHIXPBGYDEqRcGzfwPW7Eap7+tcz2etECqqvSs
+        wd7XhiJzKBZ5xi9wdViEMsMFDNp0dxwo7L8Ake4svu85g73yQGwvcUe87K27HKAeoN3QqRtF5vk65Iiu
+        L76gvj7HIfDiCziuF+JErxAai3LROUlQxvAOuGF3RSh6+ErJAdqM1JjVCp3rBnT1Q72nhAfgzzxNG4Vr
+        xjz0WTugs2j4+bcwGNoBNy1adIyp0WZqRdzvQmwtXofg8hAGMMav7MGRSVzMa0bGacXiVc8HiZG/iCR1
+        OFI1kUi6EYaDXBA7c/VYEwOwzd3Ga7WR8Jc+Ar/fHsOOUk9sKXJnDpimZqBSDzFhUX7r8sUJ5mjzUTwn
+        24FP2yLwDhfIuv3l2qf5ajkGMGufQYw8BN6lG+H168PYLtkEjysCvFodi3JpF1LSpCiQtK9M3OHGRvF6
+        vF6/C4k8AIk/r3gKCqMUwzYj+q29EFYHsM73LvHENslmCPIFiP4mBdRDK/sPNu9bcYo4bBJ78B3ui4TG
+        COyrDUC0zBeRVT4IrdyJQKkXIioDEFzhh4euuMPzBy/8VNy8OuIOFmoq99x18Cv1wn75HiQqX8GBur9y
+        v/wl+Jf5wE0swKN53qsr7GxGclMyNuRvgOCSAB6X17PrB/PdmOUC0QPYJ0n498Tnn+WhhkN89QfwdtUH
+        SBSdRH5lw38nviqNtfaQ/4sDfwIP4QeIYox0VgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATNSURBVFhH7ZZrTJtVGMe7LGaayBdMjO4DiYmXhA/GRLOo
+        i7ppjNEYP8xsH4x+mMk0MWiiMZmXGYM4JoKTVZDLmCLWcQ8rHQgtt5Z1fTvacisrLdByaYHCeqVlpYP+
+        Pc8hLyK0K+u+GU5y8r59+/b8f8//ec5zKpHsjl0HduhA71gIDcYAn9V6P+qEG5D3eaAc8KL3uh87XCa1
+        11rNIXRZwxicDkMYC/IrTYLic9iDerULZc12fp+aSoJfUbQkFovFQCO4EoPbF0EwHOWf6d5g8+LaTIjP
+        yhYH2nXOu4dQmQOQm/xw+Va40OaxssaEg1GMzwQx4AhgLBDdmAT7u2IMjcqJ1CF4fpm4J7y6TZweEIAI
+        4YkwR5ZjmA7FYA/GMMGuBFH8lzk1iIu6G3yBSHTd8nhDBAgzkABjJAgRxBUG5tnz0UWgpHoUtXLLzpyg
+        aqaqjmd5vBQQBAGIk0AWwhE4XKMYNtbC2JEDg16OUuaEtFx/ewiynLZSmFbdwRAdoKvX74bFIMPVSx+g
+        87eXcPXi61BKH0bjVxIIl7N4Wirrzcj+sSc+BAlT9KkMj3cKnRUH0SHNwKDiBBZHmxBbnsXsQCWac/fC
+        PNINF6thqg8ZS0X2me74ELIuF6bcy3fE4BzvgrI4E+b6N3BrvArwa7k4VnxYHKmBpuZtLjy5tF6Y5ERN
+        iw2nf9LEh6AmYrYHkkKsrUZg0Rai/ewDcLYdByYqAWcZMFfI8nEJa0uTEFgarls0PHoCIHFxh9D2TJiO
+        oloLhKGFhBD+BTPPc8+5BxHQfAZYpUzhNANg08Pu1xowfe1baOqPb1gvAtj8MdAkNxRaF77J7YrvRF5F
+        P4zm7RC++WG0Fz8G4dcMREh86Htg/CQw9QUr/1wmXoGQOw9dpQ/Bar0CN+uYYgooehFgxAc4IsDfagek
+        Zbr4EPnnjWhW2Td6wZS5kVe2reoAoPkUMLFp+xCwZzHbvwSiZ2AXjvC0mHoKuDj1g3gAM0zc5b0JWd0g
+        LvxpSrw9S6oGIas3oV91Ch0F++CuPgT0nGDi7wCWY0z8PdaFPkI0mAVTUyY6LxzChE0NL+sH8QDIevrO
+        bF1AgfQKB0h6aMnyDkJ3dh+W614BOo4w8VfZCq8x8TdZBzqGoPMtqMvToGv6GJ5QYKMrUmsWHSD76Z46
+        ZXvnWOLcb6VpK9oPwy9pWK1+EWh5GTA+zfL+HEvgC8DNwwhMPg9loQR6xee8G4otmcQ3A1DUdHI2Npvx
+        dU5n8qgJpD3/XtjKHl0Xb30K0D8CDDwBzD7OIs+E07AfqqJ0WISK/4iL54EIQWBkeb5Ui6LzSdqx6EBX
+        +ZPwK94F6p8FVBmAcB+LPJ15eD8i82nob5BAU3EAcw4dPxFJhP4jbD6QeNTsGVme/UOC7peoAIxyVlxB
+        J2swxYBuLzAiYZ/3wGPdg+7Se1B86ihUqj7eK+IBENDcwhLKKg34uUTYmeVbYXwOFXCLteapoxvilG/x
+        vZPf9ULom+EQYv6pBgjINRfklic9AW+3BUzy91mR6bEWrsKkToL2c+nbIiFr1VrHv04wda0wxdusom00
+        tcg3Qw0pP2FH62Fo/ngm4WJ0sFxW2jDu8HDLcwrUdy+ctDlseYGEKWp56w7/+dypwO77/3sH/gHBOYWa
+        1r8wegAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="toolStripCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYASURBVFhH1VdbTFRXFJ2UIIFUWzU01ahRohIBFbDig05V
+        KrEgylPbsYpQik/wBSoivtFogxq1qTGmTZr0u2k/2h9TE1utYAEJWrBTEWLFMlPHGZgHF+rM6tn7zpmH
+        M9rB1I+eZOcy956Ztfbea6970Gj+r6u9ogQtunSO3/ZswkvPo7VoOX6eNQo3Zo/E7cyJ0K+Mw90P4zn0
+        BVPRumQ8GpJG4Ppb0bi1ruC/I/RL+gwGvbc2EY8PvIf+M/kY/PSpOJsNpW4pHMcz8KhyHu4WTEFDYiQa
+        s+a8OJG2rYW4GheFrtLZcJzKxZMLOg4CJxLKyVwG9YsT6RisU8O6X4uOghhci40Yeoual83DzYVjYTm6
+        1B/0aUD6LEBl9B+aD47aBVBqtRymrTPRlPIaayUknVDZqJ+UNZfaXV7KdOCrSjVjH1DlWBr6jy6CY99s
+        KBdKuDKOmmQ49s9V7x1MgXVnIm7OD4FEx7GdLCT7J8sY3FNmkcng14fhGlTw96Xz/KMEyiGyJUDa6zL3
+        wNn+ExxVCWoQkepEDNTMhLk8FtenhT2/CtRzQ0WqCi7LTeDfHINLsYPXk0EMfneaf5zKTQAE7uzWq89p
+        S/P3KoFdcZ6rUhWHB7qxuDrj9eAkWtdm4U52jLfkVGZRXsqYQP2Wy4WBb+vg2DEJyumVcBq7/J8TiVuX
+        mZx9x2TYK6fylfbfeudVkIcE6OHatHCYq4V4ZI+pt6K8ztuXA37cU4kfLgYFp+fOPztYB7ZyoScBTNf+
+        beNhXBPN0xVAoDVtjFdcbmFJVTtbLwUn8Yy71A4Ct5e9wcAU9rIxsG1+E7ZN0WhKDvcnQC7XuSqW55ey
+        7j+sVYN6TEISaqa+hrIYXOy3rR+lgrtBbRtG8z1l40jo0yJAPuOpQmNGErpLEzBwfKE6xwRMY+QeJRaU
+        6KdTXw+I/j9r0RSQG9o+jggAtpUOB4W9NAqdmeFoeT/NS6BBOwmGjdMxUJvqBRVZyDFiMYlyKp8VBwrS
+        hw0J06rTcJllxhLYVhIJa/EwOErC8UeWBs25c70E6uePh2FDPM+3L6icZ+ofeQMJ63nL2WdikrbVggRl
+        TKBuYGtRGGxF4r6IAAINb09AT2kslH1JXhOhGRbBmdOcm7pDkQD7hXKuCL0rNJCgvWs0kEEE7mcGqcCD
+        1RPZsdg8CFjMLpWS5txlMYYELjcRif4zhUxCAptFVSjosz4tzL8F9Mpte1coVLiVNA2ZuctuCQpOpJRT
+        a9hwgi2ybeuRLJhyVWCT0AaF8YNX0DxLg5YVWq8GWlcvRn3CMPSVx3hMg7J3HFrE/h6wxCQo50thzdbA
+        vm1aUDOilpl3zGICDCyqQeAPczS4OkWDtrKVXgIdRytwZZIGndmjoVRM9M6vEBCRcBrueTkIW1a+3Kmq
+        XfSTe101z+9d4PzrAcy7tTAsV0EZ3E3gdmoYYwU4Id2kt9Xj4mjVtdzGQYp2VM1RSVDmFzb79ZZ6Slla
+        tifzHpoEy950GJeqoD15ahhWhKMzI4yzD0qgaVkyPyCb7CsZya7lGSGRLZmSr7CkqDz9pV5XpIj3yWIG
+        l8AP8yPY/+/nRKE+XgWnlgc9nPw4Wd3QkhIGy9ootk1ryXBVyaRoERJYisrTX/GMSv5QmAz1maNwHIxl
+        Sbivm4AbCWrpCeOZJ6P2LTreQBvpC8ZVo2DfPZ1PNL3rxzH4owJvyN5StgxI4PmR7CnGKtGG6kw+F1Jr
+        Jfjv+zc//1BCx2pJgvrVlRuN3j1a2E7koa92uars9ZO5rAbdCI6ewjEwrIuDsWIBTHUfwXxmEww1OWjP
+        EAcQkYwEJ8sP6VzoS0LqoiM/BsZdi2E5WYy+81tgvVgJ6+e70ffFHg7LxWqYzm5Bd1UO7uTF8VhLYEqI
+        7D4kcLmpKXMmV0JW48o4dX4bkyNBZwcC0a9K5mjLm8736H8Bzljs9QX3e/EMhUXHke18evEjIgEI5Onw
+        KTd9h85/nXU1Q8s8GMG7B8u5hJLIv12p13TCHkqyIe/trNuLXzfmCy9PReOSeA76m6y16/SBlwMaMrsX
+        2PgP3tqogzLDWsEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="toolStripAnterior.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAS6SURBVFhH1ZZ9TNR1HMevuXjaXbfDwQ6HDBrIDm7DGwM8
+        kieBCUHshsAMFtgNadEDEPJUIg/aKEkWKq1WuVlZIBzyEIsJGhC4CwFpyjIhMI1I2lhNMg3au+/ne/3O
+        O5Rz98fd1m2fsbHf9nq/P9/P9/35ikT/x1/eZ3kQvSaCqEAESYUEdvUQ+3EsRCUi1PfVY/GPRTzzQQqc
+        Kp3sI6Lyy0oOL9YVY/nvZXwycxJhJ0Igep11w9Y/rU7L4Y3nGzk8fWAXRM0iPN7I4PYQYOq89OI+Dpe2
+        OcPl2AbbCjB1vvrPKor0hRB9wYav1Rkb21wgPupoWwHkXPOhBgQ/PnWUO5ecduBw93YxnjjuYBsBRT1F
+        xoFbWV1B+Vi5GVzOBHh2SCFrcubfWTODVf1Vj/7eodSBO7+3cg8d18/AseW+czeCn5HCq1Nm6ABlgpUl
+        OWAhPwhOV43g1HZqOQ0ctZ07Z3BvKiYg4Zwaw4uDmF2+htnbrOgvq+t/TvO6cWeG189//Yj5u7O8bt29
+        yfPDoZyJX/sTnK+srmJoYYjD+ZnrxBCckwDfTlf4dbtB2eOBiLMBiD0XhISvVUhmpRkMRdqwGpkXnkKO
+        PhK5+hjkj+/AKxPxKJ5MwJvfZ6G2z5ApZnyCa09pQXBqu6dOboTL2yUG58y1KVzFBIT0bkb4WW9E9T2J
+        uPN+SBxQIGUoEKnDQdh9QYVsfQhyL4bhxfFwFExGofRKDHa2KMwFUDuUh5VYur2Esd/GsEnnDnHrhgec
+        k2vBuSk8pt/XHD6y1Qh/fjSUw1+diEDJ5R3Yf3WnuQBZtQypH6VyuH5Rj4AuPyPc1DmBFawCmWvVV55G
+        55bge8e2cXghc07wiql4VE8nI7FVaeiA/JAcircC8MvvC1i4swBltwIupx9b1zmHm7TdGucEP3AtCYfm
+        NEjSBRkEGM59L0bnJ6Hu2WaE28I5wQ/OavD2zXSkdKgMAra/v51fh7zOfPi0+sOVRazptAtnvrbt0WsG
+        Ls3CmQvOa2ZSUPdTGt6Zz4SmK/j+EFLg0EZzbGB3vdkNm9pkfNrXO3NL8IedueBcgL+7mI3U7jDzWxB3
+        Io6LkDZJ4dEih0+HYdqtcU5XLX88gl81YeAILjivn38WDb8+h6YlLdLYcT+QA5QB9E/xYRd2HJvZbTCf
+        9vWcZ46EssBRI3dUbRAwEY1938Wj7Eoi3riagqrpVBycy0DdjSzUz+fgyC0tktrXdEBIJOHJ5XZMCoXO
+        B8E93jxkLMHTB9XIGmKpN2JIvRe+jcPL44kouJSM4ssalE7tQsUPu7F/Ogs1c3tQPZuDLY2eD49iEiI8
+        vTYekWJruy/Ce7eYhQwNXKY+GBQwoSe9DIuIJtqKsriMSITwEHFvkCGsyx/x/YE8Xk2nnQYu/FMf26xj
+        45JgrlzrJIjqUfJFQ84p2wn+0mQkok752uZBIgighwnlhFejGxJ6Vcj4JpQvFho2iteYz/1sK0AQQiJk
+        tS5I7g3GHrZmCyajea7HNfvbRwAJIRGe9a5I66MOmGw1uzzL/2sFbU5ZrRjZA5EovPQ0m4EA+3VAOA4S
+        QZ3I6IuA8j12De3ZAUGER40Hv/9OJU4oayl79CvXmmezPb/9F2JKlGgQDXHGAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="toolStripSiguiente.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAR0SURBVFhH1ZZ9TFNXGMZvQpHV0DRlaUMbikAqBIGEWuuo
+        Cww3RBSU+rUURjfdlizT/eHHJgzRMuqMZhCTxbkZluBcnBuoMBoq0q5qM8TBECfVVTRi/WBuCcnm/lrM
+        8uyc095SCqkXEprsJue/m/ye533f5z2H4/6v35LDS8Dt5CDaIYLhUwOi7kNcJ0brYCtaLrdAWieF7jNd
+        dEUk1isxdH8IT/99ii8HmsF9wEVXBBXgeeDBm70VSOoQI/mEDDF1URTBCyhzFSLdJkd2lxILT8qjVwkm
+        4KEHed2LGFzXrYahJwU53yoRty8G6Y3pczsTvACNTQqtXcXg9Cx3aqBvU7NKLDi0QLgIi9Mi+GfTSRN4
+        AVn2BAbOd6QxeIkrHWXuLOS3pyLeEitMBI0UzfRMjmSPhA1hbrci6HxFAL7WnY2NvbkoJe2JrY2JLGLe
+        h/NgOl4J+o3/M46bf96A96+bk87IEy/4c+fJLYQe/fnESc7XBeDmK3ps6X8BJpcW8gPxEUSQXtmG7fD9
+        7UOpowTJHSqkdaiR0ZmMTFsasjvToO0ifbVnsIHL78lGYU8OVrhysfqHxQwe7rzi8mIGf3sgD+9dzccW
+        99IIlSACnN4LcD1ygjvFQdoWh+dPz0fimXgktUuR0iGDpjOBiPFHTWtPwlIy8eE9551X9fnh7wwuw7ah
+        Auy8vhy7PUV4t68AqoMyyBpkYbMWIiDmOw5yAqZHTcD00IzzOafTnheI27OcU/j2ay8xeO2NYtTfLsP2
+        wSJWickiQgTMb+OYcwqmzil4wrlqVs7rvKsY/OPR9fjkkQnVw2uQ2qRkKfJfYAEBF39zQUIETO/cX3Y+
+        55F6Pp1z610jDj14FY1jlWh6bMa2n8v9iQsXkHAmNuh8ouxTe776Yiae1fNQ50H4mBk1v5pQcEoHcQ2J
+        fqgA9+MLUJyNC+v5VOcUbiSLhuY8dNqFOLfeex2r2peB2ytFxZGKqQLorTYnzknZ996uRHlXAUTVz2HN
+        18aQJJAZcHhd+PH3S0j5Pj4QNf/AhfacOuc33GtXJnIedD78cnDaw3u+32dm8Lh9sjB4YAiP9X4Fx8Pz
+        LO805/pzyQxe4NDgFWcm2e9ZDL7erWVlr+rT461+kvOrL/pzTuDT9pw4t9ypwrpzheB2i1HcUjz1vqGr
+        uLR5I77xtrKtl2PTQGdbCIN9ETt06xU5/FtvrUuPDZfIenUbsJksFrrlKJzP+XTO33CXQGJVRH4tSeol
+        4GpILOhkCjxiUs7avs1oGDHCMuLPeWjUqHMK52rihT3VZnMd94/+hCP3tsJ6t5zB6aJpIlGj007h0v1y
+        YfDZPKnpJvvFdx3HxnbggG9DcMl8NGrG1gEjaIVm9CCZqYhQAcw5GTg67RSualTPLZyK5QUc/6OawXnn
+        NGpz6pyvFC/gxHgNc75reBNSD6dOc93OtLYC/09oSILzlhuf39+DXZ5NUBxURg/ONJK41nZZ8cW1o8g6
+        mhFlOOGvbF4J0fsi9vxWWBSCX9QCCxy93/4DvVath3Xz+04AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
